crates/tests/src/snapshots/fe_compiler_tests__analysis__case_053_return_gt_u256.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                            (
                                "y",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Bool,
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_gt_u256.fe:3:16
  │
3 │         return x > y
  │                ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_gt_u256.fe:3:20
  │
3 │         return x > y
  │                    ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_gt_u256.fe:3:16
  │
3 │         return x > y
  │                ^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_gt_u256.fe:2:5
  │  
2 │ ╭     pub def bar(x: u256, y: u256) -> bool:
3 │ │         return x > y
  │ ╰────────────────────^ attributes hash: 14666403753437991312
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
            (
                "y",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Bool,
        ),
    }

note: 
  ┌─ features/return_gt_u256.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: u256, y: u256) -> bool:
3 │ │         return x > y
  │ ╰────────────────────^ attributes hash: 6387929980237359542
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                    (
                        "y",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Bool,
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
    }

note: 
  ┌─ features/return_gt_u256.fe:2:20
  │
2 │     pub def bar(x: u256, y: u256) -> bool:
  │                    ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/return_gt_u256.fe:2:29
  │
2 │     pub def bar(x: u256, y: u256) -> bool:
  │                             ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/return_gt_u256.fe:2:38
  │
2 │     pub def bar(x: u256, y: u256) -> bool:
  │                                      ^^^^ attributes hash: 8311861578736502650
  │
  = Base(
        Bool,
    )


